Fix examples to not require add-export when using DNS_PING